# langnext-translate

./: .gitignore  .mcp.json  .prettierrc  AGENTS.md  CLAUDE.md  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.agents/skills/daisyui/: SKILL.md
scripts/: auto-locales.ts  generate-locales.ts
src-renderer/: AGENTS.md  components.d.ts  index.d.ts
src-renderer/assets/css/: main.css
src-renderer/components/: SideListItem.vue  SvgsIcon.vue
src-renderer/components/Base/: AlertDialog.vue
src-renderer/components/Home/Component/: Card.vue  NewCard.vue
src-renderer/components/Home/Models/: ModelList.vue  ProviderConfigForm.vue  ProviderDetail.vue  ProviderList.vue  ProviderListItem.vue
src-renderer/components/Home/Services/: Note.vue  Ocr.vue  Speech.vue  Translate.vue
src-renderer/components/Home/Services/TranslateConfig/: Dialog.vue
src-renderer/components/Home/Services/TranslateConfig/Channel/: OpenAI.vue
src-renderer/components/Win/: TitleBar.vue  TitleBarDefault.vue
src-renderer/composables/: index.ts
src-renderer/composables/provider-api/: openai.ts
src-renderer/i18n/locales/: de.json  en.json  jp.json  zh.json
src-renderer/layouts/: main.vue
src-renderer/pages/: home.vue  playground.vue  test.vue
src-renderer/pages/home/: about.vue  backup.vue  models.vue  quick-input.vue  services.vue
src-renderer/plugins/: 02.tauriapi.ts  03.0.pinia.ts
src-renderer/stores/: model.ts  translate-api.ts
src-renderer/types/: model.ts
src-renderer/utils/: constants.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri-dev.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: AGENTS.md  consts.rs  lib.rs
src-tauri/src/cmds/: mod.rs
src-tauri/src/module/: mod.rs  translate.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/plugin/keyevent/: impl_windows.rs
src-tauri/src/utils/: monitor_ex.rs  settings.rs
src-tauri/src/windows/: home.rs  mod.rs  translate.rs  tray.rs
tests/scripts/: openai-api.ts
